# NeuralNetworkC

./: CMakeLists.txt  CMakePresets.json  README.md
headers/: Layer.h  LinearAlgebra.h
src/: Layer.c  LinearAlgebra.c  Main.c
